Adds a factory function to ViewsDelegate for DesktopWindowTreeHost

There is at least one code path (html selects) that creates a
DesktopNativeWidgetAura directly, and relies on
DesktopWindowTreeHost::Create() being called. Problem is we can't wire
up DesktopWindowTreeHost::Create() for ChromeOS (as mus is in a
different compilation unit), so instead this adds another factory
function to ViewsDelegate that if valid DesktopNativeWidgetAura uses
to create the DesktopWindowTreeHost.

BUG=701156
TEST=none
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2746763007
Cr-Commit-Position: refs/heads/master@{#456768}

Former-commit-id: b6eb9203f08cb87cdbaa93f7f6ea4b6b5a9dd41b