ui/views/widget/desktop_aura/desktop_window_tree_host_chromeos.cc
@@ -10,8 +10,9 @@ namespace views {
 DesktopWindowTreeHost* DesktopWindowTreeHost::Create(
     internal::NativeWidgetDelegate* native_widget_delegate,
     DesktopNativeWidgetAura* desktop_native_widget_aura) {
-  // DesktopNativeWidgetAura is only used with mus, and MusClient injects the
-  // DesktopWindowTreeHost so that this is never called.
+  // DesktopNativeWidgetAura is only used with mus, and MusClient sets itself
+  // as the factory for both NativeWidgets and DesktopWindowTreeHosts, so this
+  // should never be called.
   NOTREACHED();
   return nullptr;
 }
